# lumi-filter

./: .gitignore  404.html  CNAME  Makefile  README.md  index.html  main.py  mkdocs.yml  note.txt  objects.inv  pyproject.toml
.github/: ACTIONS_SETUP.md
.github/workflows/: ci.yml  test-coverage.yml
_modules/: index.html
_modules/lumi_filter/: model.html  operator.html  shortcut.html  util.html
_sources/: index.rst.txt
api/backend/: index.html
api/field/: index.html
api/map/: index.html
api/model/: index.html
api/operator/: index.html
api/shortcut/: index.html
api/util/: index.html
docs/: index.md
docs/source/: conf.py  index.rst  lumi_filter.rst  modules.rst
example/: app.py  example.py  extentions.py  haha.db  pytest.ini  requirements.txt  setup.py
example/app/: cli.py  db_model.py  filter_model.py  schema.py
example/app/api/: advanced_model_filter.py  auto_filter.py  auto_filter_iteratorable.py  auto_filter_peewee.py  auto_filter_pydantic.py  extra_field_ordering_extra_field.py  generic_iterable.py  model_filter.py  model_filter_peewee.py  model_filter_pydantic.py  peewee_basic.py  peewee_extra_ordering.py
example/tests/: conftest.py  test_advanced_model_filter.py  test_auto_filter.py  test_model_filter.py
lumi_filter/: __init__.py  backend.py  field.py  map.py  model.py  operator.py  shortcut.py  util.py
lumi_filter/shortcut/: __init__.py
quick_start/: index.html
search/: search_index.json
src/lumi_filter/: __init__.py  backend.py  field.py  map.py  model.py  operator.py  util.py
src/lumi_filter/shortcut/: __init__.py  dynamic_model.py  shortcut.py
tests/: conftest.py  test_backend.py  test_field.py  test_fields.py  test_integration.py  test_map.py  test_model.py  test_operator.py  test_peewee_integration.py  test_shortcut.py  test_util.py
