[project]
name = "lumi-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["peewee>=3.18.2", "pydantic>=2.11.7"]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1", "pytest-mock>=3.14.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# output configuration
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "--cov=lumi_filter",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["lumi_filter"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
